SERVER-12116 Return better messages to the user when the authz version field is the wrong type